--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
+    "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "add": "^2.0.6",
+    "tailwindcss": "^4",
+    "typescript": "^5",
+    "yarn": "^1.22.22"
   }
 }
